[package]
name = "hey-rs"
version = "0.1.2"
authors = ["Brendon Felix"]
edition = "2024"
license = "MIT"
description = "A minimal command-line copilot with streaming and syntax highlighting"
homepage = "https://github.com/brendon-felix/hey"
repository = "https://github.com/brendon-felix/hey"
readme = "README.md"
keywords = ["copilot", "openai", "chatgpt"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
async-openai = "0.29"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
syntect = "5.2"
bat = { version = "0.25", default-features = false }
yansi = "1.0"
textwrap = "0.16"
term_size = "0.3"
reedline = "0.41"
nu-ansi-term = "0.50"
crossterm = "0.28"
enum-iterator = "2.1"
dialoguer = "0.11"
reqwest = "0.12"
chrono = "0.4"
unicode-segmentation = "1.12"
ansi-parser = "0.9"
# toml = "0.9"
# serde = { version = "1", features = ["derive"] }

[[bin]]
name = "hey"
path = "src/main.rs"
