[package]
name = "hey-rs"
version = "0.2.3"
authors = ["Brendon Felix"]
edition = "2024"
license = "MIT"
description = "A minimal command-line copilot with streaming and syntax highlighting"
homepage = "https://github.com/brendon-felix/hey"
repository = "https://github.com/brendon-felix/hey"
readme = "README.md"
keywords = ["copilot", "openai", "chatgpt", "cli"]
categories = ["command-line-utilities"]

[workspace.dependencies]
syntect = "5.3"
bat = { version = "0.25", default-features = false }

[dependencies]
anyhow = "1.0"
async-openai = "0.29"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
syntect = { workspace = true }
bat = { workspace = true }
yansi = "1.0"
textwrap = "0.16"
term_size = "0.3"
reedline = "0.43"
nu-ansi-term = "0.50"
crossterm = "0.28"
enum-iterator = "2.3"
dialoguer = "0.11"
reqwest = "0.12"
chrono = "0.4"
unicode-segmentation = "1.12"
ansi-parser = "0.9"
toml = "0.9"
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
shellexpand = "3.1.1"

[[bin]]
name = "hey"
path = "src/main.rs"

[build-dependencies]
# patch-apply = "0.8.3"
syntect = { workspace = true }
bat = { workspace = true }
